force-app/main/default/objects/Household_Income__c.object
<CustomObject>
    <description>The Household Income object stores income sources and amounts for the household. This data is coded with the school year the application is being completed for and is used in calculating FARM status, subsidy eligibility, and hardship status. Program Enrollment has a one-to-many relationship with Household Income.</description>
    <label>Household Income</label>
    <nameField>
        <displayFormat>HI-{0000}</displayFormat>
        <label>Household Income Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Income</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>