force-app/main/default/objects/Household_Income__c/fields/Adult_Income_Rec_Other__c.field-meta.xml
<CustomField>
    <fullName>Adult_Income_Rec_Other__c</fullName>
    <description>How often income from pensions, retirement, and all other income sources is received</description>
    <label>Adult Income Rec Other</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 times per month</fullName>
            </value>
            <value>
                <fullName>bi-weekly (every two weeks)</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>no income</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>