force-app/main/default/objects/Household_Income__c/fields/Adult_Income_Received_1__c.field-meta.xml
<CustomField>
    <fullName>Adult_Income_Received_1__c</fullName>
    <description>The amount entered above is received</description>
    <label>Adult Income Received 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 times per month</fullName>
            </value>
            <value>
                <fullName>bi-weekly (every two weeks)</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
            <value>
                <fullName>no income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>