force-app/main/default/objects/Household_Income__c/fields/Adult_Income_Sup__c.field-meta.xml
<CustomField>
    <fullName>Adult_Income_Sup__c</fullName>
    <description>Amount of income</description>
    <label>Adult Income Sup</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>