force-app/main/default/objects/Household_Income__c/fields/AdultNumIncomeSources__c.field-meta.xml
<CustomField>
    <fullName>AdultNumIncomeSources__c</fullName>
    <label>Adult Num Income Sources</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>No income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>