force-app/main/default/objects/Household_Income__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>First Name</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>