force-app/main/default/objects/Household_Income__c/fields/HHAdultIncome_1__c.field-meta.xml
<CustomField>
    <fullName>HHAdultIncome_1__c</fullName>
    <description>Amount of income received</description>
    <label>Adult Income 1</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>