force-app/main/default/objects/Household_Income__c/fields/HHAdultIncome_3__c.field-meta.xml
<CustomField>
    <fullName>HHAdultIncome_3__c</fullName>
    <description>Amount of income received</description>
    <label>Adult Income 3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>