force-app/main/default/objects/Household_Income__c/fields/HHAdultIncomeSource_1__c.field-meta.xml
<CustomField>
    <fullName>HHAdultIncomeSource_1__c</fullName>
    <label>Adult Income Source 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Child support</fullName>
            </value>
            <value>
                <fullName>Gross wages</fullName>
            </value>
            <value>
                <fullName>Net self-employment</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>VA benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>