force-app/main/default/objects/Household_Income__c/fields/HHAdultIncomeWork__c.field-meta.xml
<CustomField>
    <fullName>HHAdultIncomeWork__c</fullName>
    <description>Amount of income from work</description>
    <label>Adult Income Work</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>