force-app/main/default/objects/Household_Income__c/fields/HHChildIncome__c.field-meta.xml
<CustomField>
    <fullName>HHChildIncome__c</fullName>
    <description>Amount of income</description>
    <label>Child Income</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>