force-app/main/default/objects/Household_Income__c/fields/HHChildIncomeReceived__c.field-meta.xml
<CustomField>
    <fullName>HHChildIncomeReceived__c</fullName>
    <description>How often is this income received</description>
    <label>Child Income Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 times per month</fullName>
            </value>
            <value>
                <fullName>bi-weekly (every two weeks)</fullName>
            </value>
            <value>
                <fullName>monthly</fullName>
            </value>
            <value>
                <fullName>no income</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>