force-app/main/default/objects/Household_Income__c/fields/HHFosterChild__c.field-meta.xml
<CustomField>
    <fullName>HHFosterChild__c</fullName>
    <description>Is child a ward of the court or foster child</description>
    <label>Foster Child</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decline to disclose</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>