force-app/main/default/objects/Household_Income__c/fields/HHHomelessMigrant__c.field-meta.xml
<CustomField>
    <fullName>HHHomelessMigrant__c</fullName>
    <description>Is this child homeless, migrant, or a runaway</description>
    <label>Homeless Migrant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decline to disclose</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>