force-app/main/default/objects/Household_Income__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Last Name</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>LastName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>