force-app/main/default/objects/Household_Income__c/fields/Missing_Immunizations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Missing_Immunizations_Notes__c</fullName>
    <description>Is this child homeless, migrant, or a runaway</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Missing Immunizations Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>