force-app/main/default/objects/Household_Income__c/fields/Question_Group__c.field-meta.xml
<CustomField>
    <fullName>Question_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Group</label>
    <referenceTo>Enrollment_Component__c</referenceTo>
    <relationshipLabel>Household Income</relationshipLabel>
    <relationshipName>Household_Income</relationshipName>
    <type>Lookup</type>
</CustomField>