force-app/main/default/objects/Household_Income__c/fields/School_Year__c.field-meta.xml
<CustomField>
    <fullName>School_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The School Year record for the year the data is relevant to.</description>
    <label>School Year</label>
    <referenceTo>School_Year__c</referenceTo>
    <relationshipLabel>Household Income</relationshipLabel>
    <relationshipName>Household_Income</relationshipName>
    <type>Lookup</type>
</CustomField>